--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29972 2010-06-02 09:03:45Z noreply@oracle.com $
+# $Id: Makefile.kmk 30023 2010-06-04 08:43:01Z noreply@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -250,7 +250,7 @@ VirtualBox_QT_MOCHDRS = \
 	src/VBoxTakeSnapshotDlg.h \
 	src/VBoxUpdateDlg.h \
 	src/VBoxVMInformationDlg.h \
-	src/VBoxVMListView.h \
+	src/UIVMListView.h \
 	src/VBoxVMLogViewer.h \
 	src/globals/VBoxGlobal.h \
 	src/globals/VBoxProblemReporter.h \
@@ -351,7 +351,9 @@ VirtualBox_QT_MOCSRCS = \
 	src/runtime/UIMachineMenuBar.cpp \
 	src/runtime/UIIndicatorsPool.cpp \
 	src/runtime/UIMachine.cpp \
-	src/runtime/UIMachineLogic.cpp
+	src/runtime/UIMachineLogic.cpp \
+	src/extensions/QISplitter.cpp \
+
 ifdef VBOX_WITH_XPCOM
  VirtualBox_QT_MOCSRCS += \
 	src/globals/COMDefs.cpp
@@ -380,7 +382,7 @@ VirtualBox_SOURCES = \
 	src/VBoxTakeSnapshotDlg.cpp \
 	src/VBoxUpdateDlg.cpp \
 	src/VBoxVMInformationDlg.cpp \
-	src/VBoxVMListView.cpp \
+	src/UIVMListView.cpp \
 	src/VBoxVMLogViewer.cpp \
 	src/globals/COMDefs.cpp \
 	src/globals/VBoxDefs.cpp \
