--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30023 2010-06-04 08:43:01Z noreply@oracle.com $
+# $Id: Makefile.kmk 30114 2010-06-09 12:40:16Z noreply@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -522,7 +522,7 @@ endif
 ifdef VBOX_WITH_COCOA_QT
  VirtualBox_DEFS += VBOX_DARWIN_USE_NATIVE_CONTROLS
  VirtualBox_SOURCES.darwin += \
- 	src/darwin/VBoxCocoaApplication.m \
+ 	src/darwin/UICocoaApplication.mm \
  	src/darwin/VBoxUtils-darwin-cocoa.mm \
  	src/darwin/VBoxCocoaSpecialControls.mm
  VirtualBox_QT_MOCHDRS.darwin = \
@@ -849,7 +849,7 @@ tstDarwinKeyboard_SOURCES = \
 	src/darwin/tstDarwinKeyboard.cpp \
 	src/darwin/DarwinKeyboard.cpp
 tstDarwinKeyboard_SOURCES.amd64 = \
-	src/darwin/VBoxCocoaApplication.m
+	src/darwin/UICocoaApplication.mm
 tstDarwinKeyboard_LDFLAGS = -framework IOKit -framework Carbon -framework AppKit
 tstDarwinKeyboard_LIBS = \
 	$(LIB_RUNTIME)
