Main: COM events work (smth along those lines could be done for generic events mechanisms too)
svn:sync-xref-src-repo-rev: r62578

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29859 2010-05-28 13:17:24Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 30156 2010-06-10 17:54:11Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -337,7 +337,8 @@ VBoxSVC_SOURCES.win = \
 	win/svcmain.cpp \
 	win/svchlp.cpp \
 	win/HostPowerWin.cpp \
-	win/VBoxSVC.rc
+	win/VBoxSVC.rc \
+        win/VBoxComEvents.cpp
 
 VBoxSVC_SOURCES.linux = \
 	linux/HostHardwareLinux.cpp
