Main: console COM events, cleanup, locking
svn:sync-xref-src-repo-rev: r62689

--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30156 2010-06-10 17:54:11Z noreply@oracle.com $
+# $Id: Makefile.kmk 30207 2010-06-15 15:49:27Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -648,7 +648,9 @@ VBoxC_SOURCES = \
 VBoxC_SOURCES.win = \
 	win/dllmain.cpp \
 	win/VBoxC.def \
-	win/VBoxC.rc
+	win/VBoxC.rc \
+	win/VBoxComEvents.cpp
+
 
 ifdef VBOX_WITH_XPCOM
 VBoxC_SOURCES += \
