iprt/assert.h: Added AssertCompileMembersAtSameOffset, AssertCompileMembersSameSize and AssertCompileMembersSameSizeAndOffset + testcase.
svn:sync-xref-src-repo-rev: r62735

--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29393 2010-05-12 00:20:38Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 30240 2010-06-16 12:33:33Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -44,6 +44,7 @@ IPRT_OUT_DIR ?= $(PATH_TARGET)/Runtime
 # Target lists
 #
 PROGRAMS += \
+	tstRTAssertCompile \
 	tstRTAvl \
 	tstRTBase64 \
 	tstRTBitOperations \
@@ -160,6 +161,10 @@ endif
 #
 # Target configs in almost alphabetical order.
 #
+
+tstRTAssertCompile_TEMPLATE = VBOXR3TSTEXE
+tstRTAssertCompile_NOINST = true
+tstRTAssertCompile_SOURCES = tstRTAssertCompile.cpp
 
 tstRTAvl_TEMPLATE = VBOXR3TSTEXE
 tstRTAvl_SOURCES = tstRTAvl.cpp
