Windows Guest Additions Credential Provider: - Added reverse lookup for using "display names" as the user account name ("John Doe" -> "jdoe"). - Fixed showing empty user tile on invalid user/credentials. - Fixed domain name handling. - Fixed "dot" caption when no domain name is used. - Wipe credentials after passing over to Kerberos. - Beautified code a bit.
svn:sync-xref-src-repo-rev: r62751

--- a/src/VBox/Additions/WINNT/VBoxCredProv/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxCredProv/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 28800 2010-04-27 08:22:32Z noreply@oracle.com $
+# $Id: Makefile.kmk 30252 2010-06-16 13:48:29Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for VBoxCredProv.
 #
@@ -44,12 +44,14 @@ VBoxCredProv_LIBS.x86  := \
 	$(VBOX_PATH_PSDK_200702)/Lib/Uuid.Lib \
 	$(VBOX_PATH_PSDK_200702)/Lib/Credui.Lib \
 	$(VBOX_PATH_PSDK_200702)/Lib/Secur32.Lib \
-	$(VBOX_PATH_PSDK_200702)/Lib/ShLwApi.Lib
+	$(VBOX_PATH_PSDK_200702)/Lib/ShLwApi.Lib \
+	$(VBOX_PATH_PSDK_200702)/Lib/netapi32.lib
 VBoxCredProv_LIBS.amd64  := \
 	$(VBOX_PATH_PSDK_200702)/Lib/x64/Uuid.Lib \
 	$(VBOX_PATH_PSDK_200702)/Lib/x64/Credui.Lib \
 	$(VBOX_PATH_PSDK_200702)/Lib/x64/Secur32.Lib \
-	$(VBOX_PATH_PSDK_200702)/Lib/x64/ShLwApi.Lib
+	$(VBOX_PATH_PSDK_200702)/Lib/x64/ShLwApi.Lib \
+	$(VBOX_PATH_PSDK_200702)/Lib/x64/netapi32.Lib
 
 VBoxCredProv_LIBS    += \
 	$(VBOX_LIB_IPRT_GUEST_R3) \
