--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30192 2010-06-15 12:35:56Z noreply@oracle.com $
+# $Id: Makefile.kmk 30258 2010-06-16 16:18:50Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -173,7 +173,7 @@ VBOX_GUI_INC_DIRS = \
 	./src/widgets \
 	./src/X11 \
 	./src/darwin \
-    ./src/runtime \
+	./src/runtime \
 	./src/runtime/normal \
 	./src/runtime/fullscreen \
 	./src/runtime/seamless
