--- a/src/VBox/Main/testcase/Makefile.kmk
+++ b/src/VBox/Main/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30260 2010-06-16 16:52:19Z noreply@oracle.com $
+# $Id: Makefile.kmk 30266 2010-06-17 06:28:23Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox API testcases.
 #
@@ -25,7 +25,7 @@ ifndef VBOX_ONLY_SDK
  if defined(VBOX_WITH_TESTCASES) || "$(USERNAME)" == "umoeller"
   PROGRAMS       += \
 	tstAPI \
-	tstOVF \
+	$(if $(VBOX_OSE),,tstOVF) \
 	$(if $(VBOX_WITH_XPCOM),tstVBoxAPILinux,tstVBoxAPIWin) \
 	$(if $(VBOX_WITH_RESOURCE_USAGE_API),tstCollector,)
   PROGRAMS.linux += \
