--- a/src/VBox/Main/testcase/Makefile.kmk
+++ b/src/VBox/Main/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30266 2010-06-17 06:28:23Z noreply@oracle.com $
+# $Id: Makefile.kmk 30267 2010-06-17 06:47:39Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox API testcases.
 #
@@ -82,7 +82,7 @@ ifdef VBOX_WITH_RESOURCE_USAGE_API
 tstOVF_DEFS += VBOX_WITH_RESOURCE_USAGE_API
 endif
 
-INSTALLS += ovfdummy ovfjoomla09
+INSTALLS += $(if $(VBOX_OSE),,ovfdummy ovfjoomla09)
 
 ovfdummy_MODE = a+r,u+w
 ovfdummy_INST = bin/ovf-testcases
