Storage/iSCSI: switch to sending in a single call, avoiding separate sending of iSCSI PDU header separately on some IP stacks. Adjustments to VBoxHDD, DrvVD and MediumImpl to pass the required VD interface methods.
svn:sync-xref-src-repo-rev: r62857

--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30045 2010-06-04 20:38:56Z noreply@oracle.com $
+# $Id: Makefile.kmk 30309 2010-06-18 12:25:12Z klaus.espenlaub@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -149,11 +149,8 @@ endif
 ifdef VBOX_WITH_AHCI
  VBoxDD_DEFS           += VBOX_WITH_AHCI
 endif
-ifdef VBOX_WITH_ISCSI
- VBoxDD_DEFS           += VBOX_WITH_ISCSI
- ifdef VBOX_WITH_INIP
-  VBoxDD_DEFS          += VBOX_WITH_INIP
- endif
+ifdef VBOX_WITH_INIP
+ VBoxDD_DEFS           += VBOX_WITH_INIP
 endif
 ifdef VBOX_WITH_E1000
  VBoxDD_DEFS           += VBOX_WITH_E1000
@@ -817,6 +814,9 @@ Drivers_DEFS.win       += _WIN32_WINNT=0x0510
 Drivers_DEFS            = IN_IDE_R3
 ifdef VBOX_WITH_NETFLT
 Drivers_DEFS           += VBOX_WITH_NETFLT
+endif
+ifdef VBOX_WITH_INIP
+Drivers_DEFS           += VBOX_WITH_INIP
 endif
 ifdef VBOX_WITH_DRV_DISK_INTEGRITY
 Drivers_DEFS           += VBOX_WITH_DRV_DISK_INTEGRITY
