--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30207 2010-06-15 15:49:27Z noreply@oracle.com $
+# $Id: Makefile.kmk 30310 2010-06-18 13:00:09Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -318,6 +318,7 @@ VBoxSVC_SOURCES = \
 	SystemPropertiesImpl.cpp \
 	BIOSSettingsImpl.cpp \
 	HostPower.cpp \
+	EventImpl.cpp \
 	$(if $(VBOX_WITH_VRDP),VRDPServerImpl.cpp,) \
 	$(if $(VBOX_WITH_XPCOM),xpcom/server.cpp,) \
 	$(VBOX_XML_SCHEMADEFS_CPP)
@@ -644,6 +645,7 @@ VBoxC_SOURCES = \
 	VBoxDriversRegister.cpp \
 	AudioSnifferInterface.cpp \
 	VMMDevInterface.cpp \
+	EventImpl.cpp \
 	$(VBOX_XML_SCHEMADEFS_CPP)
 VBoxC_SOURCES.win = \
 	win/dllmain.cpp \
