--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30356 2010-06-22 08:42:22Z noreply@oracle.com $
+# $Id: Makefile.kmk 30407 2010-06-24 02:16:55Z sergey.dubov@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -322,10 +322,10 @@ VirtualBox_QT_MOCHDRS = \
 	src/widgets/VBoxOSTypeSelectorWidget.h \
 	src/widgets/VBoxProgressDialog.h \
 	src/widgets/VBoxWarningPane.h \
+	src/runtime/UIMachine.h \
 	src/runtime/UISession.h \
 	src/runtime/UIActionsPool.h \
 	src/runtime/UIIndicatorsPool.h \
-	src/runtime/UIMachine.h \
 	src/runtime/UIMachineLogic.h \
 	src/runtime/UIMachineView.h \
 	src/runtime/UIMultiScreenLayout.h \
@@ -455,6 +455,7 @@ VirtualBox_SOURCES = \
 	src/widgets/VBoxOSTypeSelectorWidget.cpp \
 	src/widgets/VBoxProgressDialog.cpp \
 	src/widgets/VBoxWarningPane.cpp \
+	src/runtime/UIMachine.cpp \
 	src/runtime/UISession.cpp \
 	src/runtime/UIActionsPool.cpp \
 	src/runtime/UIIndicatorsPool.cpp \
@@ -462,7 +463,6 @@ VirtualBox_SOURCES = \
 	src/runtime/UIFrameBufferQGL.cpp \
 	src/runtime/UIFrameBufferQImage.cpp \
 	src/runtime/UIFrameBufferSDL.cpp \
-	src/runtime/UIMachine.cpp \
 	src/runtime/UIMachineLogic.cpp \
 	src/runtime/UIMachineWindow.cpp \
 	src/runtime/UIMachineView.cpp \
