--- a/src/VBox/Main/Makefile.kmk
+++ b/src/VBox/Main/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30476 2010-06-28 16:37:23Z noreply@oracle.com $
+# $Id: Makefile.kmk 30480 2010-06-28 17:22:17Z noreply@oracle.com $
 ## @file
 # Makefile for the VBox Main module.
 #
@@ -326,7 +326,7 @@ VBoxSVC_SOURCES = \
 	$(if $(VBOX_WITH_XPCOM),xpcom/server.cpp,) \
 	$(VBOX_XML_SCHEMADEFS_CPP)
 
-$(VBOX_AUTOGEN_EVENT_CPP): $(VBOX_PATH_MAIN_SRC)/idl/autogen.xsl $(VBOX_XIDL_FILE) | $$(dir $$@)
+$(VBOX_AUTOGEN_EVENT_CPP): $(VBOX_PATH_MAIN_SRC)/idl/comimpl.xsl $(VBOX_XIDL_FILE) | $$(dir $$@)
 	$(call MSG_TOOL,xsltproc,autogen events,$<,$@)
 	$(QUIET)$(VBOX_XSLTPROC) --stringparam G_kind VBoxEvent -o $@ $< $(VBOX_XIDL_FILE)
 
