xpcom/python: fix condition for building the module for python 2.5
svn:sync-xref-src-repo-rev: r63420

--- a/src/libs/xpcom18a4/python/Makefile.kmk
+++ b/src/libs/xpcom18a4/python/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30123 2010-06-09 14:00:37Z noreply@oracle.com $
+# $Id: Makefile.kmk 30663 2010-07-06 12:23:08Z klaus.espenlaub@oracle.com $
 ## @file
 # Sub-Makefile for Python bindings
 #
@@ -100,7 +100,8 @@ VBoxPython2_4_INCS       = $(VBOX_PYTHON24_INC)
 VBoxPython2_4_LIBS       = $(VBOX_PYTHON24_LIB)
 endif
 
-if defined(VBOX_PYTHON25_INC) && "$(KBUILD_TARGET).$(KBUILD_TARGET_ARCH)" == "darwin.x86" && "$(VBOX_DEF_MACOSX_VERSION_MIN)" == "10.5"
+if defined(VBOX_PYTHON25_INC) \
+  && ("$(KBUILD_TARGET)" != "darwin" || ("$(KBUILD_TARGET_ARCH)" == "x86" && "$(VBOX_DEF_MACOSX_VERSION_MIN)" == "10.5"))
 #
 # Python 2.5 version
 #
