FE/Qt4: separate UIVMItem
svn:sync-xref-src-repo-rev: r63452

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30677 2010-07-06 16:39:25Z noreply@oracle.com $
+# $Id: Makefile.kmk 30691 2010-07-07 09:10:21Z noreply@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -393,6 +393,7 @@ VirtualBox_SOURCES = \
 	src/VBoxTakeSnapshotDlg.cpp \
 	src/VBoxUpdateDlg.cpp \
 	src/VBoxVMInformationDlg.cpp \
+	src/UIVMItem.cpp \
 	src/UIVMListView.cpp \
 	src/UIVirtualBoxEventHandler.cpp \
 	src/VBoxVMLogViewer.cpp \
