FE/Qt4: added some image manipulation functions
svn:sync-xref-src-repo-rev: r63453

--- a/src/VBox/Frontends/VirtualBox/Makefile.kmk
+++ b/src/VBox/Frontends/VirtualBox/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30691 2010-07-07 09:10:21Z noreply@oracle.com $
+# $Id: Makefile.kmk 30692 2010-07-07 09:17:35Z noreply@oracle.com $
 ## @file
 # Makefile for the VirtualBox Qt GUI.
 #
@@ -404,6 +404,7 @@ VirtualBox_SOURCES = \
 	src/globals/UIIconPool.cpp \
 	src/globals/UIMainEventListener.cpp \
 	src/globals/UIExtraDataEventHandler.cpp \
+	src/globals/UIImageTools.cpp \
 	src/extensions/QIAdvancedSlider.cpp \
 	src/extensions/QIArrowButtonPress.cpp \
 	src/extensions/QIArrowButtonSwitch.cpp \
