--- a/src/VBox/Additions/WINNT/Graphics/Wine/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Wine/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30719 2010-07-07 22:47:26Z noreply@oracle.com $
+# $Id: Makefile.kmk 30721 2010-07-07 23:46:05Z noreply@oracle.com $
 ## @file
 # Makefile for the Wine D3D related dlls for VirtualBox.
 #
@@ -125,9 +125,9 @@ wined3d_DEFS         = __WINESRC__ WINE_UNICODE_API="" _REENTRANT WINE_NOWINSOCK
     BIN_TO_DLLDIR=\"\" \
     LIB_TO_DATADIR=\"\" \
     BIN_TO_DATADIR=\"\"
-#ifneq ($(KBUILD_TYPE),debug)
+ifneq ($(KBUILD_TYPE),debug)
  wined3d_DEFS        += WINE_NO_DEBUG_MSGS
-#endif
+endif
 ifdef VBOXWDDM
  wined3d_DEFS        += VBOXWDDM 
 endif
@@ -182,9 +182,9 @@ VBoxD3D8_DEFS         = __WINESRC__ WINE_UNICODE_API="" _REENTRANT WINE_NOWINSOC
     BIN_TO_DLLDIR=\"\" \
     LIB_TO_DATADIR=\"\" \
     BIN_TO_DATADIR=\"\"
-#ifneq ($(KBUILD_TYPE),debug)
+ifneq ($(KBUILD_TYPE),debug)
  VBoxD3D8_DEFS       += WINE_NO_DEBUG_MSGS
-#endif
+endif
 VBoxD3D8_INCS         := $(PATH_SUB_CURRENT)/include
 VBoxD3D8_SOURCES      := \
     d3d8/cubetexture.c \
@@ -217,9 +217,9 @@ VBoxD3D9_DEFS         = __WINESRC__ WINE_UNICODE_API="" _REENTRANT WINE_NOWINSOC
     BIN_TO_DLLDIR=\"\" \
     LIB_TO_DATADIR=\"\" \
     BIN_TO_DATADIR=\"\"
-#ifneq ($(KBUILD_TYPE),debug)
+ifneq ($(KBUILD_TYPE),debug)
  VBoxD3D9_DEFS       += WINE_NO_DEBUG_MSGS
-#endif
+endif
 VBoxD3D9_INCS         := $(PATH_SUB_CURRENT)/include
 VBoxD3D9_SOURCES      := \
     d3d9/cubetexture.c \
