Main: separate internal machine data structs into MachineImplPrivate.h to significantly speed up compilation and for better interface separation; remove obsolete ConsoleEvents.h file
svn:sync-xref-src-repo-rev: r63543

--- a/src/VBox/Frontends/VBoxBFE/Makefile.kmk
+++ b/src/VBox/Frontends/VBoxBFE/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 28800 2010-04-27 08:22:32Z noreply@oracle.com $
+# $Id: Makefile.kmk 30760 2010-07-09 13:12:04Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxBFE (a basic frontend which doesn't make use of Main).
 #
@@ -23,7 +23,7 @@ if !defined(VBOX_WITH_HARDENING) || "$(KBUILD_TARGET)" != "darwin"  # No hardene
 # Files from Main needed for building VBoxBFE
 #
 VBOXBFE_MAIN_CPP = MouseImpl.cpp
-VBOXBFE_MAIN_H   = MouseImpl.h ConsoleEvents.h
+VBOXBFE_MAIN_H   = MouseImpl.h
 
 #
 # Targets.
