iprt/mem.h: Added RTMemWipeThoroughly().
svn:sync-xref-src-repo-rev: r63643

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30293 2010-06-17 21:33:28Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 30827 2010-07-14 12:49:36Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -258,6 +258,7 @@ RuntimeR3_SOURCES       = \
 	common/misc/RTAssertMsg2WeakV.cpp \
 	common/misc/RTFileOpenF.cpp \
 	common/misc/RTFileOpenV.cpp \
+	common/misc/RTMemWipeThoroughly.cpp \
 	common/misc/assert.cpp \
 	common/misc/buildconfig.cpp \
 	common/misc/cidr.cpp \
