wddm/3d: bugfixing, windbg extension to save mem buffer as bmp to clipboard, more debugging
svn:sync-xref-src-repo-rev: r63677

--- a/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/Graphics/Display/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30518 2010-06-29 18:30:26Z noreply@oracle.com $
+# $Id: Makefile.kmk 30855 2010-07-14 18:38:43Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for VBoxDisp.dll.
 #
@@ -103,6 +103,16 @@ DLLS += VBoxDispD3D64
 VBoxDispD3D64_EXTENDS  = VBoxDispD3D
 VBoxDispD3D64_SOURCES  = $(subst VBoxDispD3D.def,VBoxDispD3D64.def,$(VBoxDispD3D_SOURCES))
  endif
+endif
+
+ifdef VBOXVIDEOWINDBG
+DLLS += vbvdbg
+vbvdbg_TEMPLATE = VBOXR3STATIC
+vbvdbg_DEFS     = UNICODE _UNICODE
+vbvdbg_SOURCES  = \
+	wddm/dbg/VBoxVideoWinDbg.cpp \
+	wddm/dbg/VBoxVideoWinDbg.def
+vbvdbg_SDKS     = WINDDKWLH
 endif
 
 include	$(KBUILD_PATH)/subfooter.kmk
