--- a/src/VBox/Installer/solaris/Makefile.kmk
+++ b/src/VBox/Installer/solaris/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30137 2010-06-09 18:45:50Z noreply@oracle.com $
+# $Id: Makefile.kmk 30858 2010-07-15 09:25:46Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the Solaris installer.
 #
@@ -344,7 +344,8 @@ endif
 ifdef VBOX_WITH_VRDP
  SOLARIS_STRIP_BINS += \
 	VBoxVRDP.so \
-	VRDPAuth.so
+	VRDPAuth.so \
+	VRDPAuthSimple.so
  SOLARIS_COMMON += \
 	rdesktop-vrdp.tar.gz
  ifdef VBOX_WITH_VRDP_RDESKTOP
