Audio: Inital HDA commit. Not fully workable, compilable on Mac (Linux, Windows haven't been tested).
svn:sync-xref-src-repo-rev: r63695

--- a/src/VBox/Devices/Makefile.kmk
+++ b/src/VBox/Devices/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30772 2010-07-10 04:58:28Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 30866 2010-07-16 05:37:14Z noreply@oracle.com $
 ## @file
 # Top-level sub-makefile for the devices, drivers and services.
 #
@@ -317,6 +317,13 @@ DevicesR3_SOURCES       = \
 	Storage/fdc.c \
 	Serial/DevSerial.cpp \
 	Parallel/DevParallel.cpp
+
+ifdef VBOX_WITH_AUDIO_INTELHD
+    DevicesR3_SOURCES += Audio/DevIchIntelHDA.cpp
+    DevicesR3_SOURCES += Audio/DevCodec.cpp
+    DevicesR3_DEFS    += VBOX_WITH_AUDIO_INTELHD
+    VBoxDD_DEFS    += VBOX_WITH_AUDIO_INTELHD
+endif
 
 ifdef VBOX_DYNAMIC_NET_ATTACH
  DevicesR3_DEFS        += VBOX_DYNAMIC_NET_ATTACH
