--- a/src/VBox/Main/testcase/Makefile.kmk
+++ b/src/VBox/Main/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30299 2010-06-18 08:37:16Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 30876 2010-07-16 11:32:38Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox API testcases.
 #
@@ -91,7 +91,8 @@ ovf-testcases_MODE = a+r,u+w
 ovf-testcases_INST = $(INST_BIN)ovf-testcases/
 ovf-testcases_SOURCES = \
 	ovf-dummy.vmdk \
-	ovf-joomla-0.9/joomla-1.1.4-ovf.ovf=>ovf-joomla-0.9/joomla-1.1.4-ovf.ovf
+	ovf-joomla-0.9/joomla-1.1.4-ovf.ovf=>ovf-joomla-0.9/joomla-1.1.4-ovf.ovf \
+	ovf-winxp-vbox-sharedfolders/winxp.ovf=>ovf-winxp-vbox-sharedfolders/winxp.ovf
 endif
 
 #
