--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30799 2010-07-13 08:16:37Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 30888 2010-07-17 00:56:41Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -519,11 +519,16 @@ include	$(KBUILD_PATH)/subfooter.kmk
 
 # Alias the PGM templates to the object in which they are defined.
 PGMInternal.o \
-PGMBth.o   PGMGst.o   PGMShw.o \
-PGMBth.obj PGMGst.obj PGMShw.obj: PGM.o
-PGMAllBth.o   PGMAllGst.o   PGMAllShw.o \
-PGMAllBth.obj PGMAllGst.obj PGMAllShw.obj: PGMAll.o
-PGMGCBth.o   PGMGCGst.o   PGMGCShw.o \
-PGMGCBth.obj PGMGCGst.obj PGMGCShw.obj: PGMGC.o
-PGMPhysRWTmpl.o PGMPhysRWTmpl.obj: PGMPhys.o
+PGMBth.o   	PGMGst.o   	PGMShw.o \
+PGMBth.obj 	PGMGst.obj 	PGMShw.obj: 	PGM.o
+
+PGMAllBth.o   	PGMAllGst.o   	PGMAllShw.o \
+PGMAllBth.obj 	PGMAllGst.obj 	PGMAllShw.obj: 	PGMAll.o
+
+PGMGCBth.o   	PGMGCGst.o   	PGMGCShw.o \
+PGMGCBth.obj 	PGMGCGst.obj 	PGMGCShw.obj: 	PGMGC.o
+
+PGMPhysRWTmpl.o PGMPhysRWTmpl.obj: 		PGMPhys.o
+
+PGMInline.o 	PGMInline.obj: 			PGMDbg.o
 
