follow up to r63851.
svn:sync-xref-src-repo-rev: r63852

--- a/src/VBox/Runtime/Makefile.kmk
+++ b/src/VBox/Runtime/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30827 2010-07-14 12:49:36Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 30962 2010-07-21 13:43:56Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT (IPRT).
 #
@@ -1397,6 +1397,7 @@ RuntimeR0Drv_SOURCES    = \
 	common/string/utf-16.cpp \
 	common/string/utf-8.cpp \
 	common/table/avlpv.cpp \
+	common/time/time.cpp \
 	generic/RTLogWriteStdErr-stub-generic.cpp \
 	generic/RTLogWriteUser-generic.cpp \
 	generic/RTRandAdvCreateSystemFaster-generic.cpp \
