xpcom/java: missed dep
svn:sync-xref-src-repo-rev: r63887

--- a/src/libs/xpcom18a4/java/Makefile.kmk
+++ b/src/libs/xpcom18a4/java/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30972 2010-07-21 16:00:56Z noreply@oracle.com $
+# $Id: Makefile.kmk 30979 2010-07-22 10:28:03Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for Java bindings
 #
@@ -127,7 +127,11 @@ ifndef VBOX_WITH_JAVA_SUPPORT_IN_XPIDL
 # Generate .java interface files from .xidl
 #
 
-$(VBOX_JXPCOM_GEN)/jxpcomgen.list: $(VBOX_XIDL_FILE) $(VBOX_JXPCOM_SRC)/tools/genjifaces.xsl | $(VBOX_JXPCOM_GEN)/java/interfaces/
+$(VBOX_JXPCOM_GEN)/jxpcomgen.list: \
+               $(VBOX_XIDL_FILE)   \
+               $(VBOX_FILESPLIT)   \
+               $(VBOX_JXPCOM_SRC)/tools/genjifaces.xsl \
+               | $(VBOX_JXPCOM_GEN)/java/interfaces/
 	$(QUIET)echo Generating Java interface files
 	$(QUIET)$(RM) -f $(wildcard $(VBOX_JXPCOM_GEN)/java/interfaces/*.java)
 	$(QUIET)$(VBOX_XSLTPROC)   \
