--- a/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxTray/Makefile.kmk
@@ -1,10 +1,10 @@
-# $Id: Makefile.kmk 29746 2010-05-21 17:03:19Z noreply@oracle.com $
+# $Id: Makefile.kmk 31002 2010-07-22 14:45:41Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for VBoxTray.
 #
 
 #
-# Copyright (C) 2006-2007 Oracle Corporation
+# Copyright (C) 2006-2010 Oracle Corporation
 #
 # This file is part of VirtualBox Open Source Edition (OSE), as
 # available from http://www.virtualbox.org. This file is free software;
@@ -40,6 +40,13 @@ ifdef VBOX_WITH_GUEST_PROPS
  VBoxTray_DEFS     +=  _WIN32_IE=0x500 VBOX_WITH_GUEST_PROPS
  VBoxTray_SOURCES  += \
 	VBoxHostVersion.cpp
+endif
+ifdef VBOX_WITH_SHARED_FOLDERS
+ VBoxTray_DEFS     +=  VBOX_WITH_SHARED_FOLDERS
+ VBoxTray_SOURCES  += \
+	VBoxSharedFolders.cpp
+ VBoxTray_LIBS.win += \
+	mpr.lib
 endif
 
 VBoxTray_LIBS     = \
