--- a/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29535 2010-05-17 11:57:06Z noreply@oracle.com $
+# $Id: Makefile.kmk 31002 2010-07-22 14:45:41Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the common guest addition code library.
 #
@@ -60,7 +60,7 @@ VBoxGuestR0Lib_SOURCES      = \
 	Init.cpp \
 	VMMDev.cpp \
 	HGCM.cpp \
-	VBoxCalls.c \
+	VBoxGuestR0LibSharedFolders.c \
 	VbglR0CanUsePhysPageList.cpp
 
 
@@ -87,6 +87,7 @@ VBoxGuestR3Lib_TEMPLATE    = VBOXGUESTR3LIB
 VBoxGuestR3Lib_DEFS        = \
 	VBOX_WITH_HGCM \
 	$(if $(VBOX_WITH_GUEST_PROPS),VBOX_WITH_GUEST_PROPS,) \
+	$(if $(VBOX_WITH_SHARED_FOLDERS),VBOX_WITH_SHARED_FOLDERS,) \
 	$(if $(VBOX_WITH_GUEST_CONTROL),VBOX_WITH_GUEST_CONTROL,)
 VBoxGuestR3Lib_SOURCES     = \
 	VBoxGuestR3Lib.cpp \
@@ -113,6 +114,10 @@ ifdef VBOX_WITH_GUEST_PROPS
  VBoxGuestR3Lib_SOURCES   += \
  	VBoxGuestR3LibGuestProp.cpp \
  	VBoxGuestR3LibHostVersion.cpp
+endif
+ifdef VBOX_WITH_SHARED_FOLDERS
+ VBoxGuestR3Lib_SOURCES   += \
+ 	VBoxGuestR3LibSharedFolders.cpp
 endif
 ifdef VBOX_WITH_GUEST_CONTROL
  VBoxGuestR3Lib_SOURCES   += \
