Python WS: generate code compatible with newer ZSI
svn:sync-xref-src-repo-rev: r64079

--- a/src/VBox/Main/webservice/Makefile.kmk
+++ b/src/VBox/Main/webservice/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31022 2010-07-22 19:26:07Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31117 2010-07-26 14:49:24Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox web service.
 #
@@ -155,6 +155,8 @@ PATH_TARGET_WEBTEST           := $(VBOXWEB_OUT_DIR)/webtest
 
 VBOXWEB_IDL_SRC_ORIG          := $(VBOX_XIDL_FILE)
 VBOXWEB_IDL_SRC               := $(VBOXWEB_OUT_DIR)/VirtualBox.xidl
+VBOXWEB_WSDL                   = $(VBOX_PATH_SDK)/bindings/webservice/vboxweb.wsdl
+VBOXWEBSERVICE_WSDL            = $(VBOX_PATH_SDK)/bindings/webservice/vboxwebService.wsdl
 
 VBOXWEB_TYPEMAP               := $(VBOXWEB_OUT_DIR)/typemap.dat
 
@@ -285,9 +287,6 @@ endif
 
  vboxwebsrv_ORDERDEPS = $(VBOXWEB_OUT_DIR)/gsoap_copy_all_ts
  endif # !VBOX_ONLY_SDK
-
-VBOXWEB_WSDL                   = $(VBOX_PATH_SDK)/bindings/webservice/vboxweb.wsdl
-VBOXWEBSERVICE_WSDL            = $(VBOX_PATH_SDK)/bindings/webservice/vboxwebService.wsdl
 
 ifdef VBOX_WITH_JWS
 INSTALLS += VBoxJWs-inst-jar
