--- a/src/VBox/Additions/linux/Makefile.kmk
+++ b/src/VBox/Additions/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31133 2010-07-27 09:40:38Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31137 2010-07-27 13:02:34Z noreply@oracle.com $
 ## @file
 # Makefile for the linux guest additions base directory.
 #
@@ -90,8 +90,10 @@ ifndef VBOX_OSE
  	$(VBOX_LNX_ADD_DBG_LIB_DIR) \
  	$(VBOX_LNX_ADD_DBG_MOD_DIR) \
  	$(VBOX_LNX_ADD_INST_STAGE_DIR)
+ # Use VBOX_WITHOUT_LINUX_GUEST_PACKAGE to skip building the .run installer.
+ # This will only take effect if you also use VBOX_WITHOUT_ADDITIONS_ISO.
  PACKING     += \
- 	$(PATH_BIN)/additions/VBoxLinuxAdditions.run \
+ 	$(ifndef VBOX_WITHOUT_LINUX_GUEST_PACKAGE $(PATH_BIN)/additions/VBoxLinuxAdditions.run) \
  	$(VBOX_LNX_ADD_ARCHIVES) \
  	$(PATH_BIN)/additions/VBoxGuestAdditions-dbg.tar.bz2
  OTHER_CLEAN += \
