--- a/src/VBox/Additions/linux/Makefile.kmk
+++ b/src/VBox/Additions/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31137 2010-07-27 13:02:34Z noreply@oracle.com $
+# $Id: Makefile.kmk 31138 2010-07-27 13:18:40Z knut.osmundsen@oracle.com $
 ## @file
 # Makefile for the linux guest additions base directory.
 #
@@ -93,7 +93,7 @@ ifndef VBOX_OSE
  # Use VBOX_WITHOUT_LINUX_GUEST_PACKAGE to skip building the .run installer.
  # This will only take effect if you also use VBOX_WITHOUT_ADDITIONS_ISO.
  PACKING     += \
- 	$(ifndef VBOX_WITHOUT_LINUX_GUEST_PACKAGE $(PATH_BIN)/additions/VBoxLinuxAdditions.run) \
+ 	$(if-expr !defined(VBOX_WITHOUT_LINUX_GUEST_PACKAGE), $(PATH_BIN)/additions/VBoxLinuxAdditions.run,) \
  	$(VBOX_LNX_ADD_ARCHIVES) \
  	$(PATH_BIN)/additions/VBoxGuestAdditions-dbg.tar.bz2
  OTHER_CLEAN += \
