--- a/src/VBox/Additions/linux/Makefile.kmk
+++ b/src/VBox/Additions/linux/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31138 2010-07-27 13:18:40Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31143 2010-07-27 15:17:16Z noreply@oracle.com $
 ## @file
 # Makefile for the linux guest additions base directory.
 #
@@ -485,7 +485,9 @@ $(PATH_BIN)/additions/VBoxLinuxAdditions.run: \
 		$(VBOX_LNX_ADD_INST_STAGE_DIR)install.sh \
 		$$(INSTARGET_LnxAdd-scripts) \
 		$(VBOX_VERSION_STAMP)
-	$(QUIET)$(RM) -f $(foreach file, $(VBOX_LNX_ADD_ARCHIVES), $(VBOX_LNX_ADD_INST_STAGE_DIR)$(subst -r$(VBOX_SVN_REV),,$(notdir $(file))))
+    # Remove any archives left over from previous builds so that they don't
+    # end up in our installer as well.
+	$(QUIET)$(RM) -f $(foreach file, $(wildcard $(VBOX_LNX_ADD_INST_STAGE_DIR)$(VBOX_LNX_ADD_PACKAGE_NAME)-*.tar.bz2), $(file))
 	$(QUIET)$(foreach file, $(VBOX_LNX_ADD_ARCHIVES), \
 		$(CP) -f $(file) $(VBOX_LNX_ADD_INST_STAGE_DIR)$(subst -r$(VBOX_SVN_REV),,$(notdir $(file)))$(NLTAB) )
 	$(QUIET)$(VBOX_MAKESELF) --nocomp $(VBOX_LNX_ADD_INST_STAGE_DIR) $@ \
