--- a/src/VBox/Additions/Makefile.kmk
+++ b/src/VBox/Additions/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29317 2010-05-11 08:40:19Z noreply@oracle.com $
+# $Id: Makefile.kmk 31144 2010-07-27 15:18:12Z noreply@oracle.com $
 ## @file
 # Top-level makefile for the VirtualBox Guest Additions.
 #
@@ -122,14 +122,24 @@ endif
 
 ifdef VBOX_WITH_ADDITIONS_ISO.linux.amd64
  VBOX_PATH_ADDITIONS.linux.amd64 = $(PATH_OUT_BASE)/linux.amd64/$(KBUILD_TYPE)/bin/additions
+ ifdef VBOX_WITH_COMBINED_LINUX_GUEST_PACKAGE
+  VBOX_LNX_ADD_AMD64_RUN_PKG=VBoxLinuxAdditions.run
+ else
+  VBOX_LNX_ADD_AMD64_RUN_PKG=VBoxLinuxAdditions-amd64.run
+ endif
  GUESTADDITIONS_FILESPEC.linux.amd64 = \
-	VBoxLinuxAdditions-amd64.run=$(VBOX_PATH_ADDITIONS.linux.amd64)/VBoxLinuxAdditions.run
+	$(VBOX_LNX_ADD_AMD64_RUN_PKG)=$(VBOX_PATH_ADDITIONS.linux.amd64)/VBoxLinuxAdditions.run
 endif
 ifdef VBOX_WITH_ADDITIONS_ISO.linux.x86
  VBOX_PATH_ADDITIONS.linux.x86 = $(PATH_OUT_BASE)/linux.x86/$(KBUILD_TYPE)/bin/additions
 ## @todo 64-bit additions: rename this package, update docs (?) and tests (?). create wrapper? create gnome/kde autorun app (xplatform) ?
+ ifdef VBOX_WITH_COMBINED_LINUX_GUEST_PACKAGE
+  VBOX_LNX_ADD_X86_RUN_PKG=VBoxLinuxAdditions.run
+ else
+  VBOX_LNX_ADD_X86_RUN_PKG=VBoxLinuxAdditions-x86.run
+ endif
  GUESTADDITIONS_FILESPEC.linux.x86 = \
-	VBoxLinuxAdditions-x86.run=$(VBOX_PATH_ADDITIONS.linux.x86)/VBoxLinuxAdditions.run \
+	$(VBOX_LNX_ADD_X86_RUN_PKG)=$(VBOX_PATH_ADDITIONS.linux.x86)/VBoxLinuxAdditions.run \
 	autorun.sh=$(VBOX_PATH_ADDITIONS.linux.x86)/autorun.sh
 endif
 
