Java: testing with Java 1.5 shows that glue code is functional there too
svn:sync-xref-src-repo-rev: r64243

--- a/src/VBox/Main/webservice/Makefile.kmk
+++ b/src/VBox/Main/webservice/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31117 2010-07-26 14:49:24Z noreply@oracle.com $
+# $Id: Makefile.kmk 31232 2010-07-30 08:04:52Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox web service.
 #
@@ -457,9 +457,13 @@ endef
 	$(VBOXWEB_WS_PHP) \
 	$(VBOXWEB_PYTHONWSSAMPLE)\
 	$(VBOXWEB_JAXWSSAMPLE) \
-	$(VBOXWEB_METRICSAMPLE) \
+	$(VBOXWEB_METRICSAMPLE)
+
+ifdef VBOX_WITH_OLD_JWS
+  VBOXWEB_OTHERS               += \
         $(VBOXWEB_JAVA15_JAR) \
 	$(VBOXWEB_JAVA16_JAR)
+endif
 
  #
  # Install sample code.
