--- a/src/VBox/Main/webservice/Makefile.kmk
+++ b/src/VBox/Main/webservice/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31232 2010-07-30 08:04:52Z noreply@oracle.com $
+# $Id: Makefile.kmk 31234 2010-07-30 10:01:46Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the VBox web service.
 #
@@ -450,18 +450,18 @@ endef
  endif
 
  VBOXWEB_OTHERS               += \
-	$(VBOXWEB_GLUE_JAVA_TMP) \
-	$(VBOXWEB_GLUE_PYTHON) \
-	$(VBOXWEB_WS_PYTHON) \
-	$(VBOXWEB_WS_PERL) \
-	$(VBOXWEB_WS_PHP) \
-	$(VBOXWEB_PYTHONWSSAMPLE)\
-	$(VBOXWEB_JAXWSSAMPLE) \
-	$(VBOXWEB_METRICSAMPLE)
+	$(VBOXWEB_GLUE_PYTHON) 	 \
+	$(VBOXWEB_WS_PYTHON)     \
+	$(VBOXWEB_WS_PERL)       \
+	$(VBOXWEB_WS_PHP)        \
+	$(VBOXWEB_PYTHONWSSAMPLE)
 
 ifdef VBOX_WITH_OLD_JWS
   VBOXWEB_OTHERS               += \
-        $(VBOXWEB_JAVA15_JAR) \
+	$(VBOXWEB_GLUE_JAVA_TMP)  \
+	$(VBOXWEB_JAXWSSAMPLE)    \
+	$(VBOXWEB_METRICSAMPLE)   \
+        $(VBOXWEB_JAVA15_JAR)     \
 	$(VBOXWEB_JAVA16_JAR)
 endif
 
