RTLdrFlt.cpp: c++filt like thing resolving VMMR.r0 addresses in panic dumps - not working yet.
svn:sync-xref-src-repo-rev: r64363

--- a/src/VBox/Runtime/testcase/Makefile.kmk
+++ b/src/VBox/Runtime/testcase/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30240 2010-06-16 12:33:33Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31325 2010-08-03 09:44:30Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for the IPRT testcases.
 #
@@ -503,6 +503,17 @@ ntGetTimerResolution_SOURCES = ntGetTimerResolution.cpp
 ntGetTimerResolution_SDKS.win = WINPSDK W2K3DDK VBOX_NTDLL
 
 endif # VBOX_WITH_TESTCASES
+
+
+#
+# Various useful tools
+#
+
+# RTLdrFlt is similar to c++filt, except that it's for VMMR0.r0 stacks.
+PROGRAMS += RTLdrFlt
+RTLdrFlt_SOURCES = RTLdrFlt.cpp
+
+
 
 include	$(KBUILD_PATH)/subfooter.kmk
 
