Some more fixes for Guest Additions version lookup/status; moved some duplicate helper function to VbglR0.
svn:sync-xref-src-repo-rev: r64417

--- a/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31002 2010-07-22 14:45:41Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 31364 2010-08-04 16:44:20Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the common guest addition code library.
 #
@@ -60,8 +60,11 @@ VBoxGuestR0Lib_SOURCES      = \
 	Init.cpp \
 	VMMDev.cpp \
 	HGCM.cpp \
+	VBoxGuestR0LibMisc.c \
 	VBoxGuestR0LibSharedFolders.c \
 	VbglR0CanUsePhysPageList.cpp
+
+VBoxGuestR0LibMisc.c_DEFS = VBOX_SVN_REV=$(VBOX_SVN_REV)
 
 
 #
@@ -78,7 +81,8 @@ VBoxGuestR0LibBase_SOURCES  = \
 	Init.cpp \
 	VMMDev.cpp \
 	HGCMInternal.cpp \
-	VbglR0CanUsePhysPageList.cpp
+	VbglR0CanUsePhysPageList.cpp \
+	VBoxGuestR0LibMisc.c
 
 #
 # VBoxGuestR3Lib
