--- a/src/VBox/Installer/solaris/Makefile.kmk
+++ b/src/VBox/Installer/solaris/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30858 2010-07-15 09:25:46Z noreply@oracle.com $
+# $Id: Makefile.kmk 31390 2010-08-05 11:10:13Z ramshankar.venkataraman@oracle.com $
 ## @file
 # Sub-Makefile for the Solaris installer.
 #
@@ -71,9 +71,8 @@ else
  SOLARIS_DBG_DIR_ISA         := $(SOLARIS_DBG_DIR_32)
  SOL_DBG_OBJCOPY             := $(CP) -p    # Solaris ld/gobjcopy(2.15) don't get along on x86, works only on amd64. So just using cp for now.
 endif
-SOL_OBJCOPY                  := /usr/sfw/bin/gobjcopy --strip-unneeded -R .comment
+SOL_OBJCOPY                  := /usr/sfw/bin/gobjcopy --strip-debug -R .comment
 SOL_GTAR                     := /usr/sfw/bin/gtar
-
 
 # Figure out the paths to the two platform specific Qt4 directories
 SOLARIS_PATH_QT_32 = $(subst solaris.$(KBUILD_TARGET_ARCH),solaris.x86,$(VBOX_PATH_QT4))
