--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 30888 2010-07-17 00:56:41Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31402 2010-08-05 12:28:18Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -361,6 +361,7 @@ ifdef VBOX_WITH_RAW_MODE
  	VMMGC/VMMGCA.asm \
  	VMMGC/HWACCMGCA.asm \
  	VMMRZ/DBGFRZ.cpp \
+ 	VMMRZ/PGMRZDynMap.cpp \
  	VMMRZ/VMMRZ.cpp \
  	VMMAll/CPUMAllRegs.cpp \
  	VMMAll/CPUMAllA.asm \
@@ -493,7 +494,7 @@ VMMR0_SOURCES.amd64 = \
 VMMR0_SOURCES.x86 = \
 	VMMR0/VMMR0JmpA-x86.asm
 VMMR0_SOURCES.darwin.x86 = \
-	VMMR0/PGMR0DynMap.cpp
+	VMMRZ/PGMRZDynMap.cpp
 
 # disable annoying warnings about array subscript above array bounds in aPages[]
 PGMPool.cpp_CXXFLAGS = $(if-expr $(KBUILD_TARGET) == "win",,$(VBOX_GCC_Wno-array_bounds))
