Additions/XFree86/vboxvideo: eliminate some problematic symbols
svn:sync-xref-src-repo-rev: r64474

--- a/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31364 2010-08-04 16:44:20Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 31409 2010-08-05 13:47:41Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the common guest addition code library.
 #
@@ -151,6 +151,8 @@ VBoxGuestR3LibXFree86_DEFS     = \
 	VBOX_VBGLR3_XFREE86 \
 	RTMEM_NO_WRAP_TO_EF_APIS \
 	$(if $(VBOX_WITH_GUEST_PROPS),VBOX_WITH_GUEST_PROPS,)
+VBoxGuestR3LibXFree86_CXXFLAGS.linux = \
+    $(VBOX_GCC_fno-stack-protector) -ffreestanding
 VBoxGuestR3LibXFree86_SOURCES  = \
 	VBoxGuestR3Lib.cpp \
 	VBoxGuestR3LibGR.cpp \
