--- a/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31414 2010-08-05 15:43:28Z noreply@oracle.com $
+# $Id: Makefile.kmk 31426 2010-08-05 21:17:44Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for the common guest addition code library.
 #
@@ -145,12 +145,14 @@ VBoxGuestR3LibShared_INST    := $(INST_ADDITIONS_LIB)
 # C library is not available.
 #
 ## @todo We're quite probably using the wrong template here.
-VBoxGuestR3LibXFree86_TEMPLATE = VBOXGUESTR3XF86MOD
+VBoxGuestR3LibXFree86_TEMPLATE = VBOXGUESTR3LIB
 VBoxGuestR3LibXFree86_DEFS     = \
 	VBOX_WITH_HGCM \
 	VBOX_VBGLR3_XFREE86 \
 	RTMEM_NO_WRAP_TO_EF_APIS \
 	$(if $(VBOX_WITH_GUEST_PROPS),VBOX_WITH_GUEST_PROPS,)
+VBoxGuestR3LibXFree86_CXXFLAGS = \
+	$(VBOX_GCC_fno-stack-protector) -ffreestanding
 VBoxGuestR3LibXFree86_SOURCES  = \
 	VBoxGuestR3Lib.cpp \
 	VBoxGuestR3LibGR.cpp \
