--- a/src/VBox/Additions/WINNT/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxGuest/Makefile.kmk
@@ -1,10 +1,10 @@
-# $Id: Makefile.kmk 29059 2010-05-05 09:07:22Z noreply@oracle.com $
+# $Id: Makefile.kmk 31430 2010-08-06 08:47:51Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for VBoxGuest (Windows Guest Additions Driver).
 #
 
 #
-# Copyright (C) 2006-2007 Oracle Corporation
+# Copyright (C) 2006-2010 Oracle Corporation
 #
 # This file is part of VirtualBox Open Source Edition (OSE), as
 # available from http://www.virtualbox.org. This file is free software;
@@ -42,7 +42,9 @@ VBoxGuest_SOURCES       = \
 	Helper.cpp \
 	HelperBugCheck.cpp \
 	VBoxGuest.rc
-VBoxGuest_LIBS        = \
+VBoxGuest_SOURCES      += \
+	../../common/VBoxGuest/VBoxHelper.cpp
+VBoxGuest_LIBS          = \
 	$(PATH_SDK_W2K3DDK_LIB)/ntoskrnl.lib \
 	$(PATH_SDK_W2K3DDK_LIB)/hal.lib \
 	$(VBOX_LIB_VBGL_R0BASE) \
@@ -70,6 +72,9 @@ VBoxGuestNT_SOURCES   = \
 	HelperBugCheck.cpp \
 	NTLegacy.cpp \
 	VBoxGuest.rc
+VBoxGuestNT_SOURCES  += \
+	../../common/VBoxGuest/VBoxHelper.cpp
+
 VBoxGuestNT_LIBS      = \
 	$(PATH_SDK_W2K3DDK_LIB)/exsup.lib \
 	$(PATH_SDK_W2K3DDK_LIB)/ntoskrnl.lib \
