--- a/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuestLib/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31426 2010-08-05 21:17:44Z noreply@oracle.com $
+# $Id: Makefile.kmk 31430 2010-08-06 08:47:51Z andreas.loeffler@oracle.com $
 ## @file
 # Sub-Makefile for the common guest addition code library.
 #
@@ -60,12 +60,8 @@ VBoxGuestR0Lib_SOURCES      = \
 	Init.cpp \
 	VMMDev.cpp \
 	HGCM.cpp \
-	VBoxGuestR0LibMisc.c \
 	VBoxGuestR0LibSharedFolders.c \
 	VbglR0CanUsePhysPageList.cpp
-
-VBoxGuestR0LibMisc.c_DEFS = VBOX_SVN_REV=$(VBOX_SVN_REV)
-
 
 #
 # VBoxGuestR0LibBase
@@ -81,8 +77,7 @@ VBoxGuestR0LibBase_SOURCES  = \
 	Init.cpp \
 	VMMDev.cpp \
 	HGCMInternal.cpp \
-	VbglR0CanUsePhysPageList.cpp \
-	VBoxGuestR0LibMisc.c
+	VbglR0CanUsePhysPageList.cpp
 
 #
 # VBoxGuestR3Lib
