--- a/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/common/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31430 2010-08-06 08:47:51Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 31432 2010-08-06 08:53:39Z andreas.loeffler@oracle.com $
 ## @file
 # Makefile for the Cross Platform Guest Additions Driver.
 #
@@ -47,6 +47,7 @@ if1of ($(KBUILD_TARGET), freebsd $(if $(defined VBOX_WITH_ADDITION_DRIVERS),linu
   VBoxGuest_SOURCES     += \
   	VBoxGuest.cpp \
   	VBoxHelper.cpp
+  VBoxHelper.cpp_DEFS    = VBOX_SVN_REV=$(VBOX_SVN_REV)
   VBoxGuest_LIBS         = \
   	$(VBOX_LIB_VBGL_R0BASE) \
   	$(VBOX_LIB_IPRT_GUEST_R0)
