DBGF: Kick-off for DBGFR3Reg*. Implemented simple queried only. The debugger + MachineDebugger will use only this API later on.
svn:sync-xref-src-repo-rev: r64576

--- a/src/VBox/VMM/Makefile.kmk
+++ b/src/VBox/VMM/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31402 2010-08-05 12:28:18Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31491 2010-08-09 16:13:37Z knut.osmundsen@oracle.com $
 ## @file
 # Top-level makefile for the VMM.
 #
@@ -81,6 +81,7 @@ VMMR3_SOURCES   = \
 	DBGFLog.cpp \
 	DBGFMem.cpp \
 	DBGFOS.cpp \
+	DBGFReg.cpp \
 	DBGFStack.cpp \
 	DBGFSym.cpp \
 	EM.cpp \
