Windows build fix
svn:sync-xref-src-repo-rev: r64606

--- a/src/libs/zlib-1.2.1/Makefile.kmk
+++ b/src/libs/zlib-1.2.1/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 28800 2010-04-27 08:22:32Z noreply@oracle.com $
+# $Id: Makefile.kmk 31514 2010-08-10 09:53:44Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for zlib.
 #
@@ -19,6 +19,9 @@ SUB_DEPTH = ../../..
 include $(KBUILD_PATH)/subheader.kmk
 
 LIBRARIES += VBox-zlib
+if1of ($(KBUILD_TARGET),os2 win)
+ LIBRARIES += VBox-zlib-static
+endif
 VBox-zlib_TEMPLATE = VBOXR3
 VBox-zlib_DEFS = verbose=-1
 VBox-zlib_SOURCES = \
@@ -34,6 +37,10 @@ VBox-zlib_SOURCES = \
 	infback.c \
 	inftrees.c \
 	inffast.c
+
+VBox-zlib-static_TEMPLATE = VBOXR3STATIC
+VBox-zlib-static_DEFS = $(VBox-zlib_DEFS)
+VBox-zlib-static_SOURCES = $(VBox-zlib_SOURCES)
 
 include $(KBUILD_PATH)/subfooter.kmk
 
