Forgot one makefile.
svn:sync-xref-src-repo-rev: r64617

--- a/src/VBox/Additions/WINNT/VBoxGuest/Makefile.kmk
+++ b/src/VBox/Additions/WINNT/VBoxGuest/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 31430 2010-08-06 08:47:51Z andreas.loeffler@oracle.com $
+# $Id: Makefile.kmk 31521 2010-08-10 11:42:23Z knut.osmundsen@oracle.com $
 ## @file
 # Sub-Makefile for VBoxGuest (Windows Guest Additions Driver).
 #
@@ -41,9 +41,8 @@ VBoxGuest_SOURCES       = \
 	VBoxGuestPnP.cpp \
 	Helper.cpp \
 	HelperBugCheck.cpp \
+	../../common/VBoxGuest/VBoxGuest2.cpp \
 	VBoxGuest.rc
-VBoxGuest_SOURCES      += \
-	../../common/VBoxGuest/VBoxHelper.cpp
 VBoxGuest_LIBS          = \
 	$(PATH_SDK_W2K3DDK_LIB)/ntoskrnl.lib \
 	$(PATH_SDK_W2K3DDK_LIB)/hal.lib \
@@ -71,9 +70,8 @@ VBoxGuestNT_SOURCES   = \
 	Helper.cpp \
 	HelperBugCheck.cpp \
 	NTLegacy.cpp \
+	../../common/VBoxGuest/VBoxGuest2.cpp \
 	VBoxGuest.rc
-VBoxGuestNT_SOURCES  += \
-	../../common/VBoxGuest/VBoxHelper.cpp
 
 VBoxGuestNT_LIBS      = \
 	$(PATH_SDK_W2K3DDK_LIB)/exsup.lib \
