xpidl: added --as-needed to Linux builds
svn:sync-xref-src-repo-rev: r64632

--- a/src/libs/xpcom18a4/Makefile.kmk
+++ b/src/libs/xpcom18a4/Makefile.kmk
@@ -1,4 +1,4 @@
-# $Id: Makefile.kmk 29182 2010-05-07 01:08:55Z knut.osmundsen@oracle.com $
+# $Id: Makefile.kmk 31534 2010-08-10 13:17:52Z noreply@oracle.com $
 ## @file
 # Sub-Makefile for XPCOM.
 #
@@ -472,6 +472,8 @@ else
 	$(libIDL_config_cflags)
  xpidl_LDFLAGS = \
 	$(libIDL_config_libs)
+ xpidl_LDFLAGS.linux = \
+	$(VBOX_LD_as_needed)
 endif
 
 #
